style: fix spacing between widget icon and text

--- a/src/frontend/src/assets/css/dashboard.css
+++ b/src/frontend/src/assets/css/dashboard.css
@@ -52,10 +52,11 @@
 
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
 
   align-self: center;
-  
+
   cursor: pointer;
 
   border: none;
@@ -68,7 +69,7 @@
 }
 
 .widget__icon--thermo {
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .sidebar {
@@ -111,8 +112,8 @@
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
@@ -123,8 +124,8 @@
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
@@ -149,4 +150,3 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-
